[project]
name = "model-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "nannyml==0.13.0",
    "kaleido==0.2.0",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "scipy==1.14.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
notebook = [
    "ipython>=9.4.0",
    "jupyterlab==4.3.5",
]
model-registry = [
    "mlflow>=2.19.0",
]
model-training = [
    "scikit-learn==1.5.1",
    "xgboost==2.1.1",
    "matplotlib==3.9.2",
]
